--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Coursera
 @using Coursera.Models
+@using Coursera.Models.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
