Added the Coursera Logo For the Admin and Instructor Dashboard

--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -53,11 +53,8 @@
             <div class="sidebar-logo">
                 <!-- Logo Header -->
                 <div class="logo-header" data-background-color="dark">
-                    <a href="/Home/Index" class="logo">
-                        <img src="~/assets/img/kaiadmin/logo_light.svg"
-                             alt="navbar brand"
-                             class="navbar-brand"
-                             height="20" />
+                    <a href="/Home/Index" class="logo" style="color:white">
+                        <i class="fa fa-book-reader mr-3" style="color:white"></i>&nbsp;Coursera
                     </a>
                     <div class="nav-toggle">
                         <button class="btn btn-toggle toggle-sidebar">
@@ -75,14 +72,7 @@
             </div>
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
                 <div class="sidebar-content">
-                    <ul class="nav nav-secondary">
-                     
-                        <li class="nav-section">
-                            <span class="sidebar-mini-icon">
-                                <i class="fa fa-ellipsis-h"></i>
-                            </span>
-                            <h4 class="text-section">Dashboard</h4>
-                        </li>
+                    <ul class="nav nav-secondary">                  
                      
                         <li class="nav-item">
                             <a data-bs-toggle="collapse" href="#submenu">
