Added the MyCourse Feature and Displayed All Courses.

--- a/Areas/Instructor/Views/_ViewImports.cshtml
+++ b/Areas/Instructor/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿
 @using Coursera.Areas
 @using Coursera.Areas.Instructor
-@* @using Coursera.Areas.Instructor.Models; *@
+@using Coursera.Areas.Instructor.Models;
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
