ViewLesson edit and Update is working fine

--- a/Areas/Instructor/Views/Shared/_LessonsPartial.cshtml
+++ b/Areas/Instructor/Views/Shared/_LessonsPartial.cshtml
@@ -27,5 +27,29 @@
 
 
 <script>
-    
+    $(document).ready(function(){
+        $(document).on("click",".edit-lesson",function(){
+          const LessonId=  $(this).data('id');
+          $.get(`/Instructor/Course/GetLessonEdit?LessonId=${LessonId}`,function(html){
+            $("#modalContainer").html(html);
+            $('#editLessonModal').modal('show');
+          });
+        });
+
+        $(document).on("submit","#editLessonForm",function(e){
+            e.preventDefault();
+          const formData= $(this).serialize();
+          console.log(formData);
+          $.post(`/Instructor/Course/UpdateLesson`,formData)
+          .done(function(response){
+            alert(response);
+            location.reload();
+          })
+          .fail(function(xhr){
+            alert(xhr.responseText);
+          });
+        });
+
+
+    });
 </script>
