--- a/Areas/Instructor/Views/Course/AddCourse.cshtml
+++ b/Areas/Instructor/Views/Course/AddCourse.cshtml
@@ -3,10 +3,11 @@
 
 <h1>Add New Course</h1>
 <form action="AddCourse" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <label asp-for="CourseName">Course Name: </label>
     <input type="text" asp-for="CourseName" /> <br /><br/>
     <label asp-for="CourseDescription">Course Description: </label>
     <input type="text" asp-for="CourseDescription" /><br /><br />
 
-    <button type="submit">Next</button>
+    <button class="btn btn-primary" type="submit">Submit</button>
 </form>
