Course,Sections,Lessons are added.

--- a/Areas/Instructor/Views/Shared/_SectionsPartial.cshtml
+++ b/Areas/Instructor/Views/Shared/_SectionsPartial.cshtml
@@ -29,7 +29,7 @@
                             </button>
 
 
-                            <button class="btn btn-outline-warning edit-course" data-id="@sections.Id">Edit</button>
+                            <button class="btn btn-outline-warning edit-section" data-id="@sections.Id">Edit</button>
                         </td>
                     </tr>
                 }
