--- a/Areas/Instructor/Views/Shared/_EditSectionModal.cshtml
+++ b/Areas/Instructor/Views/Shared/_EditSectionModal.cshtml
@@ -12,7 +12,7 @@
                     <input type="hidden" name="Id" value="@Model.Id" />
 
                     <div class="mb-3">
-                        <label for="CourseName" class="form-label">Course Name</label>
+                        <label for="CourseName" class="form-label">Section Name</label>
                         <input type="text" class="form-control" id="CourseSectionName" name="CourseSectionName"
                             value="@Model.CourseSectionName" required />
                     </div>
