--- a/Areas/Instructor/Views/Course/AddSection.cshtml
+++ b/Areas/Instructor/Views/Course/AddSection.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AddSectionViewModel;
 
-<h2>Add Section</h2>
+@* <h2>Add Section</h2>
 <form asp-action="AddSection" method="post">
     <div class="mb-3">
         <label for="CourseId" class="form-label">Select Course</label>
@@ -13,4 +13,50 @@
         <input type="text" name="CourseSectionName" class="form-control" required />
     </div>
     <button type="submit" class="btn btn-primary">Add Section</button>
-</form>
+</form> *@
+
+<!-- Content wrapper -->
+<div class="content-wrapper">
+    <!-- Content -->
+
+    <div class="container-md container-p-y">
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Course Section/</span> Add Section</h4>
+
+        <!-- Basic Layout & Basic with Icons -->
+        <div class="row" style="display:flex; align-items:center;justify-content:center">
+            <!-- Basic Layout -->
+            <div class="col-6">
+                <div class="card mb-4">
+                    <div class="card-header d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Add Section</h5>
+
+                    </div>
+                    <div class="card-body">
+                        <form asp-action="AddSection" method="post">
+                            
+                            <div class="row mb-3">
+                                <label class="col-sm-2 col-form-label" for="CourseSectionName">Course Name</label>
+                                <div class="col-sm-10">
+                                    <input type="text" name="CourseSectionName" class="form-control" id="basic-default-name" placeholder="Web Design" />
+                                </div>
+                            </div>                        
+                            <div class="mb-3">
+                                <label for="defaultSelect" class="form-label">Select Course</label>
+                                <select id="defaultSelect" asp-for="CourseId" asp-items="ViewBag.courses" class="form-select">
+                                    <option value="">-- Select a Course --</option>
+                                </select>
+                            </div>
+                            <div class="row justify-content-end">
+                                <div class="col-sm-10">
+                                    <button type="submit" class="btn btn-primary">Add Section</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Basic with Icons -->
+        </div>
+    </div>
+</div>
+<!-- / Content -->
