UserProfile tables is Added

--- a/Areas/Instructor/Views/Shared/_Layout.cshtml
+++ b/Areas/Instructor/Views/Shared/_Layout.cshtml
@@ -136,7 +136,7 @@
                             </li>
                             <li class="menu-item">
                                 <a href="@Url.Action("MyCourses","Course",new{area="Instructor"})" class="menu-link">
-                                    <div data-i18n="Connections">All Courses</div>
+                                    <div data-i18n="Connections">My Courses</div>
                                 </a>
                             </li>
                         </ul>
