--- a/Areas/Instructor/Views/Profile/MyProfile.cshtml
+++ b/Areas/Instructor/Views/Profile/MyProfile.cshtml
@@ -6,7 +6,14 @@
 @* { *@
 
     <form action="/" method="get">
+    <img src="~/assets2/img/Profile/Instructor/5.png"
+         alt="user-avatar"
+         class="d-block rounded"
+         height="100"
+         width="100"
+         id="uploadedAvatar" />
     <p>Username: @Model.UserName</p>
+    <p>UserRole: @Model.RoleName</p>
     <p>Email: @Model.Email</p>
     <p>Photo: @Model.Photo</p>
     <p>Subject: @Model.Subject</p>
